--- a/CocktailApp/Base.lproj/Main.storyboard
+++ b/CocktailApp/Base.lproj/Main.storyboard
@@ -286,31 +286,39 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qX4-30-KdS">
-                                <rect key="frame" x="106" y="216" width="180" height="230"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultCocktail" translatesAutoresizingMaskIntoConstraints="NO" id="qX4-30-KdS">
+                                <rect key="frame" x="109" y="254" width="175" height="240"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="230" id="HXz-dq-wg8"/>
-                                    <constraint firstAttribute="width" constant="180" id="qXd-jJ-Ek7"/>
+                                    <constraint firstAttribute="width" constant="175" id="P7z-fe-UZj"/>
+                                    <constraint firstAttribute="height" constant="240" id="qoy-m5-3vy"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8ht-Us-C9L">
-                                <rect key="frame" x="50" y="454" width="292" height="50"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="8ht-Us-C9L">
+                                <rect key="frame" x="109" y="500" width="175" height="50"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="3gk-en-XDO"/>
-                                    <constraint firstAttribute="width" constant="292" id="ePw-RF-gog"/>
+                                    <constraint firstAttribute="width" constant="175" id="32g-dN-RMA"/>
+                                    <constraint firstAttribute="height" constant="50" id="7Vv-FY-hEK"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="20"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QCv-XG-pCa">
-                                <rect key="frame" x="50" y="507" width="292" height="50"/>
-                                <color key="backgroundColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <button contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QCv-XG-pCa">
+                                <rect key="frame" x="109" y="630" width="175" height="80"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="v61-Qn-NmI"/>
+                                    <constraint firstAttribute="height" constant="80" id="XQO-dA-8py"/>
+                                    <constraint firstAttribute="width" constant="175" id="ueO-fm-Cu9"/>
                                 </constraints>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Choose your lucky drink ?"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Shuffle">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <imageReference key="image" image="shuffle.circle" catalog="system" symbolScale="large" variableValue="1"/>
+                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
+                                </state>
                                 <connections>
                                     <action selector="bringRandomButtonTapped:" destination="VdT-V2-b0D" eventType="touchUpInside" id="kfU-tv-lth"/>
                                 </connections>
@@ -319,19 +327,22 @@
                         <viewLayoutGuide key="safeArea" id="sGz-hL-stW"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="sGz-hL-stW" firstAttribute="trailing" secondItem="qX4-30-KdS" secondAttribute="trailing" constant="107" id="8Dh-g5-S81"/>
-                            <constraint firstItem="QCv-XG-pCa" firstAttribute="top" secondItem="8ht-Us-C9L" secondAttribute="bottom" constant="3" id="JYy-Vr-amo"/>
-                            <constraint firstItem="QCv-XG-pCa" firstAttribute="leading" secondItem="sGz-hL-stW" secondAttribute="leading" constant="50" id="ZMN-oO-Gm7"/>
-                            <constraint firstItem="qX4-30-KdS" firstAttribute="top" secondItem="sGz-hL-stW" secondAttribute="top" constant="113" id="c9H-gW-xnw"/>
-                            <constraint firstItem="8ht-Us-C9L" firstAttribute="top" secondItem="qX4-30-KdS" secondAttribute="bottom" constant="8" symbolic="YES" id="d3C-oF-i4W"/>
-                            <constraint firstItem="sGz-hL-stW" firstAttribute="trailing" secondItem="QCv-XG-pCa" secondAttribute="trailing" constant="51" id="eXE-C4-WLG"/>
-                            <constraint firstItem="8ht-Us-C9L" firstAttribute="leading" secondItem="sGz-hL-stW" secondAttribute="leading" constant="50" id="hOw-8k-0iy"/>
-                            <constraint firstItem="qX4-30-KdS" firstAttribute="leading" secondItem="sGz-hL-stW" secondAttribute="leading" constant="106" id="hrP-bc-sjM"/>
-                            <constraint firstItem="sGz-hL-stW" firstAttribute="trailing" secondItem="8ht-Us-C9L" secondAttribute="trailing" constant="51" id="nPu-yW-hni"/>
+                            <constraint firstItem="qX4-30-KdS" firstAttribute="top" secondItem="sGz-hL-stW" secondAttribute="top" constant="151" id="3fm-Pb-cy4"/>
+                            <constraint firstItem="QCv-XG-pCa" firstAttribute="top" secondItem="8ht-Us-C9L" secondAttribute="bottom" constant="80" id="7JM-cP-7gM"/>
+                            <constraint firstItem="sGz-hL-stW" firstAttribute="trailing" secondItem="qX4-30-KdS" secondAttribute="trailing" constant="109" id="8zu-Vy-SxV"/>
+                            <constraint firstItem="qX4-30-KdS" firstAttribute="centerX" secondItem="QVs-3y-Foc" secondAttribute="centerX" id="Gsa-dl-MmF"/>
+                            <constraint firstItem="qX4-30-KdS" firstAttribute="leading" secondItem="sGz-hL-stW" secondAttribute="leading" constant="109" id="Rb1-uU-n1S"/>
+                            <constraint firstItem="8ht-Us-C9L" firstAttribute="top" secondItem="qX4-30-KdS" secondAttribute="bottom" constant="6" id="Uw0-1d-wOv"/>
+                            <constraint firstItem="QCv-XG-pCa" firstAttribute="leading" secondItem="sGz-hL-stW" secondAttribute="leading" constant="109" id="Y2p-fq-ASY"/>
+                            <constraint firstItem="8ht-Us-C9L" firstAttribute="leading" secondItem="sGz-hL-stW" secondAttribute="leading" constant="109" id="jRs-Mi-ig9"/>
+                            <constraint firstItem="sGz-hL-stW" firstAttribute="trailing" secondItem="8ht-Us-C9L" secondAttribute="trailing" constant="109" id="mkw-GG-l7v"/>
+                            <constraint firstItem="8ht-Us-C9L" firstAttribute="centerX" secondItem="qX4-30-KdS" secondAttribute="centerX" id="o8f-DO-1fN"/>
+                            <constraint firstItem="sGz-hL-stW" firstAttribute="trailing" secondItem="QCv-XG-pCa" secondAttribute="trailing" constant="109" id="rg9-e2-T5p"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="m4C-t4-H7W"/>
                     <connections>
+                        <outlet property="button" destination="QCv-XG-pCa" id="KzR-AD-cSE"/>
                         <outlet property="imageView" destination="qX4-30-KdS" id="j39-o5-JKz"/>
                         <outlet property="nameLabel" destination="8ht-Us-C9L" id="W9b-fz-iQL"/>
                     </connections>
@@ -423,8 +434,10 @@
         </scene>
     </scenes>
     <resources>
+        <image name="defaultCocktail" width="700" height="700"/>
         <image name="magnifyingglass" catalog="system" width="128" height="117"/>
         <image name="questionmark.square.dashed" catalog="system" width="128" height="114"/>
+        <image name="shuffle.circle" catalog="system" width="128" height="123"/>
         <image name="square.split.2x2.fill" catalog="system" width="128" height="114"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
